thead fixed( but not complete for instance). scrollbar disappearing when document deleted solved

--- a/media/com_emundus/css/emundus_files.css
+++ b/media/com_emundus/css/emundus_files.css
@@ -1,4 +1,4 @@
-
+html {overflow-y: scroll;}
 p {
     margin-bottom: 0 !important;
     margin-left: 0;
@@ -545,25 +545,79 @@ thead th:hover {
     color: #666666
 }
 
-/*fixed thead------------*/
+/*scrollbar style------------*/
+
+ /*   scrollbar {
+       -moz-appearance: none !important;
+       background: rgb(0,255,0) !important;
+    }
+    thumb,scrollbarbutton {
+       -moz-appearance: none !important;
+       background-color: rgb(0,0,255) !important;
+    }
+
+    thumb:hover,scrollbarbutton:hover {
+       -moz-appearance: none !important;
+       background-color: rgb(243, 237, 237) !important;
+    }
+    scrollbarbutton {
+       display: none !important;
+    }
+    scrollbar[orient="vertical"] {
+      min-width: 15px !important;
+    }*/
+   /*google chrome*/
+    /*::-webkit-scrollbar {
+      width: 2px;
+      height: 2px;
+    }
+    ::-webkit-scrollbar-button {
+      width: 0px;
+      height: 0px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #e1e1e1;
+      border: 0px none #ffffff;
+      border-radius: 50px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #ffffff;
+    }
+    ::-webkit-scrollbar-thumb:active {
+      background: #000000;
+    }
+    ::-webkit-scrollbar-track {
+      background: #666666;
+      border: 0px none #ffffff;
+      border-radius: 50px;
+    }
+    ::-webkit-scrollbar-track:hover {
+      background: #666666;
+    }
+    ::-webkit-scrollbar-track:active {
+      background: #333333;
+    }
+    ::-webkit-scrollbar-corner {
+      background: transparent;
+    }*/
+
+
+
 
 /*fixed thead------------*/
-body{
-    overflow-x:hidden;
-}
+
 .table-scroll {
-   position: relative;
+    position: relative;
     max-width: 100%;
     width: 100%;
-    margin: auto;
     display:table;
 }
 .table-wrap {
+    position:relative;
     width: 100%;
     display: block;
-    height: 600px;
+    height: 80vh;
     overflow:auto;
-    position:relative;
     z-index:1;
 }
 .table-scroll table {
@@ -577,27 +631,28 @@ body{
     background: #fff;
     vertical-align: top;
 }
-.faux-table table {
+.false-table table {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
+    height:100%;
     pointer-events: none;
 }
-.faux-table table + table {
+.false-table table + table {
     top: auto;
     bottom: 0;
 }
-.faux-table table tbody {
+.false-table table tbody {
     visibility: hidden;
     border-color: transparent;
 }
-.faux-table table + table thead {
+.false-table table + table thead {
     visibility: hidden;
     border-color: transparent;
 }
 
-.faux-table {
+.false-table {
     position:absolute;
     top:0;
     right:0;
@@ -605,13 +660,12 @@ body{
     bottom:0;
     overflow-y:scroll;
 }
-.faux-table thead, .faux-table thead th{
+.false-table thead, .false-table thead th{
     position:relative;
     z-index:2;
 }
 
-/*scroll side 
-.scroll-side { 
+/*scroll side  
     height: 1000px !important;
     overflow-y:scroll !important;
 }
